exports[`Divider tests > a11y and snapshots #0`] = `
<div id="wrapper" style="display: inline-block;">
  <div style="padding: 10px;">
    <div>
      <span>Before Divider</span>
      <hr class="MuiDivider-root denhaag-divider" role="presentation" />
      <span>After Divider</span>
    </div>
  </div>
</div>
`;

exports[`Divider tests > a11y and snapshots #1`] = `
<div id="wrapper" style="display: inline-block;">
  <div style="padding: 10px;">
    <div style="display: flex; align-items: center; height: 100px;">
      <span>Before Divider</span>
      <hr
        class="MuiDivider-root denhaag-divider MuiDivider-vertical denhaag-divider--vertical"
        role="presentation"
      />
      <span>After Divider</span>
    </div>
  </div>
</div>
`;
